--- a/index.html
+++ b/index.html
@@ -4,23 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <title>Index</title>
 </head>
-<header class="page-header">
-    <div class="logo">
-        <a href="index.html"><strong>LANDON OLESKY</strong></a>
-    </div>
-    <nav>
-        <ul>
-            <li><a href="things.html">Things I've Done</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
 <body>
-    <h1> Hi, I'm Landon Olesky</h1>
-    <h2>I'm a creatuve person in a technical field...</h2>
+
+
+    <header class="page-header">
+        <div class="logo">
+            <a href="index.html"><strong>LANDON OLESKY</strong></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="things.html">Things I've Done</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <img src="images/Frame 1.svg" alt="Rectangle1" class = "ROY">
+
+    <h1> Hi, I'm Landon Olesky
+    <img src="images/Intersect.svg" alt="Intersect1" class = "Portrait"></h1>
+
+    <h2>I'm a creative person in a technical field...</h2>
     <p>
         I am a programmer, musician, and student. I like to think of my self as a jack of all trades, soon to be master of some.
     </p>
@@ -28,7 +37,7 @@
         My love for programming started when I was in community college, where I took my first coding class. 
         Like most 18-year-olds,  I didn’t know what I wanted to do as a career. 
         That  class introduced me to something I had never seen before. 
-        Something I liked AND could make money doing! This lead me to choosing the path I am on now, and to you reading this!
+        Something I liked AND could make money doing! This led me to choosing the path I am on now, and to you reading this!
     </p>
     <p>
         Yes, I am a musician. I play the bass guitar and have been for about 3 years now. It has been my main creative outlet. 
@@ -37,7 +46,7 @@
     </p>
     <p>
         When I say I am a student, I don’t just mean I have a student ID in my wallet (although I do). 
-        I mean I am a student of LIFE ITSELF. 
+        I mean I am a student of life itself. 
         I genuinely do believe I will continue to learn for as long as I possibly can. 
     </p>
     
