just Contact page needed and hyperlinks

--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,11 @@
     <img src="images/Frame 1.svg" alt="Rectangle1" class = "ROY">
 
     <h1> Things I've Done </h1>
+    
 
         <div class="projects-container">
         <div class="project-box">
-            <h3 class="project-title">StephenLuberaOfficial</h3>
+            <h3 class="project-title">Get In Touch</h3>
             <div class="project-content">
                 <img src="images/StephenLuberaBand.svg" alt="Stephen Lubera Instagram" class="project-image">
                 <img src="images/QR Code.svg" alt="Instagram QR Code" class="QR-code">
