--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <title>Index</title>
 </head>
-<body>
+<body class="Index">
 
 
     <header class="page-header">
