--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="things.html">Things I've Done</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html"><strong>About</strong></a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
