--- a/things.html
+++ b/things.html
@@ -18,7 +18,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="things.html">Things I've Done</a></li>
+                <li><a href="things.html"><strong>Things I've Done</strong></a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -30,8 +30,10 @@
 
         <div class="projects-container">
         <div class="project-box">
-            <h3 class="project-title">StephenLuberaOfficial</h3>
+            <a href="https://www.instagram.com/stephenluberaofficial/">
+            <h3 class="project-title">StephenLuberaOfficial</h3></a>
             <div class="project-content">
+                
                 <img src="images/StephenLuberaBand.svg" alt="Stephen Lubera Instagram" class="project-image">
                 <img src="images/QR Code.svg" alt="Instagram QR Code" class="QR-code">
             </div>
@@ -39,7 +41,8 @@
         </div>
 
         <div class="project-box">
-            <h3 class="project-title">Simple Is Beautiful</h3>
+            <a href="https://www.instagram.com/stephenluberaofficial/">
+            <h3 class="project-title">Simple Is Beautiful</h3></a>
             <div class="project-content">
                 <img src="images/game-screenshot.svg" alt="Simple Is Beautiful Game" class="project-image">
                 <img src="images/Unity.svg" alt="Unity Logo" class="unity-logo">
