--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <p>
         I am currently studying Games and Interactive Media at Michigan State University, where I will graduate in 2026 with a minor in Computer Science. My coursework includes Python and C++ programming, discrete math, game development in C#, UI and UX design, SQL-based data structures, and full web development. These classes have helped me think critically, solve problems creatively, and approach technology from both an artistic and technical perspective. After MSU, I plan to continue my education with a Master of Science in Cybersecurity at Eastern Michigan University or Grand Valley University. I love learning in every aspect of my life and I do not think I will ever stop.
     </p>
-    <img src="images/image 7.svg" alt="Resume" class = "Resume2"></h1>
+    <img src="images/image7.svg" alt="Resume" class = "Resume2">
     
 </body>
 </html>
