--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
                 
             </div>
             <a href="https://www.linkedin.com/in/landon-olesky-916a39264/">
-            <p class="contact-info">LinkedIn <img src="images/linkedin-brands-solid-full (1) 1.svg" alt="LinkedIn" class="Contact-image"></p>
+            <p class="contact-info">LinkedIn <img src="images/linkedin-brands-solid-full.svg" alt="LinkedIn" class="Contact-image"></p>
             </a>
             <a href="https://www.instagram.com/loid.jpg/">
-            <p class="contact-info">Instagram <img src="images/square-instagram-brands-solid-full 1.svg" alt="LinkedIn" class="Contact-image"></p>
+            <p class="contact-info">Instagram <img src="images/square-instagram-brands-solid-full.svg" alt="LinkedIn" class="Contact-image"></p>
             </a>
 
         </div>
